k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: blog
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /(api/.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway
                port:
                  number: 3000
          - path: /(health)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway
                port:
                  number: 3000
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 3007
